<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_invite"
        android:title="@string/action_invite_members"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_manage_members"
        android:title="@string/action_manage_members"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_group_settings"
        android:title="@string/action_group_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_report"
        android:title="@string/action_export_report"
        app:showAsAction="never" />
</menu>